# PokerHandsKata

./: .coverage  .coveragerc  .gitignore  .replit  Hand.py  HandSpec.py  IllegalArgumentsException.py  PokerHands.py  PokerHandsSpec.py  README.md  browserbookmarks.md  cases_spec.py  hand.py  hand_spec.py  poker_hands.py  poker_hands_spec.py  poker_ranks.py  pyproject.toml  run.sh  run_test_and_coverage.sh
htmlcov/: Hand_py.html  PokerHandsSpec_py.html  PokerHands_py.html  index.html  status.json
